--- a/assets/style.css
+++ b/assets/style.css
@@ -1,11 +1,9 @@
 body {
   max-width: 1920px;
   margin: auto;
+  font-family: "Inter", sans-serif;
 }
-* {
-  font-family: "Inter";
-  font-style: normal;
-}
+
 .top-header {
   background-color: white;
   position: sticky;
@@ -13,8 +11,10 @@ body {
   z-index: 1000;
   display: flex;
   justify-content: space-between;
-  padding-inline: 100px;
-  padding-block: 30px;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 30px;
+  padding-bottom: 30px;
   align-items: center;
 }
 
@@ -30,7 +30,9 @@ body {
 }
 
 .nav li {
-  padding-inline: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  cursor: pointer;
 }
 
 .nav a {
@@ -45,8 +47,10 @@ body {
 #about {
   display: flex;
   background-color: #f6d2b8;
-  padding-inline: 100px;
-  padding-block: 100px;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 100px;
+  padding-bottom: 100px;
   position: relative;
 }
 
@@ -68,22 +72,25 @@ body {
 }
 
 .picture img {
-  width: 100%;
+  max-width: 100%;
 }
 #about-me {
   flex: 2;
 }
+
 .about-me__title {
   margin-top: 1em;
   margin-bottom: 60px;
   font-size: 30px;
 }
+
 .about-me__introduction {
   font-family: "Spectral";
   font-weight: 800;
   font-style: italic;
   width: 60%;
 }
+
 #about-me p {
   width: 80%;
   font-size: 14px;
@@ -91,33 +98,41 @@ body {
 
 .title {
   text-align: center;
-  padding-block: 2em;
+  padding-top: 2em;
+  padding-bottom: 2em;
 }
+
 .gallery {
   display: none;
 }
+
 .gallery .nav {
   justify-content: center;
 }
+
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
   background-color: #beb45a;
   border-radius: 0;
 }
+
 .nav-pills .nav-link {
   color: #000;
 }
+
 .item-column {
   position: relative;
   margin-bottom: 0 !important;
   padding: 0;
 }
+
 .item-column::after {
   content: "";
   display: block;
   padding-bottom: 100%;
 }
+
 .gallery-item {
   position: absolute;
   width: 100%;
@@ -125,11 +140,12 @@ body {
   object-fit: cover;
   padding: 0.5em;
 }
+
 .mg-prev,
 .mg-next {
   width: 30px;
   height: 30px;
-  border-radius: 00%;
+  border-radius: 0;
   justify-content: center;
   align-items: center;
   display: flex;
@@ -141,15 +157,21 @@ body {
   font-style: italic;
   width: 70%;
   margin: auto;
-  padding-block: 3em;
+  padding-top: 3em;
+  padding-bottom: 3em;
 }
-.quote__text {
-  font-family: Spectral;
+
+.quote__text,
+.quote__author {
+  font-family: "Spectral";
   font-style: italic;
+}
+
+.quote__text {
   font-weight: 300;
 }
+
 .quote__author {
-  font-family: Spectral;
   font-weight: 800;
   font-size: 22px;
 }
@@ -159,6 +181,7 @@ body {
   background-color: #a8d5d8;
   position: relative;
 }
+
 #services .container::before {
   content: " ";
   background-color: #1c6474;
@@ -192,13 +215,16 @@ body {
   margin: auto;
   background-color: #d8d3a8;
   position: relative;
-  padding-inline: 100px;
-  padding-block: 100px;
+  padding-left: 100px;
+  padding-right: 100px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 #contact .container {
   display: flex;
 }
+
 .picture.right::before {
   content: " ";
   background-color: #beb45a;
@@ -209,9 +235,11 @@ body {
   right: 0;
   z-index: -1;
 }
+
 .form-container {
   flex: 2;
 }
+
 form {
   display: flex;
   flex-direction: column;
@@ -236,12 +264,13 @@ form textarea {
   font-size: 1.2em;
   margin-bottom: 20px;
 }
+
 input[type="submit"] {
   background-color: #beb45a;
   padding: 0.5em 1em;
 }
 
-@media all and (max-width: 1180px) {
+@media (max-width: 1180px) {
   .picture {
     flex: 2;
   }
@@ -259,98 +288,10 @@ input[type="submit"] {
   }
 }
 
-@media all and (max-width: 1000px) {
-  #about {
-    flex-direction: column;
-  }
-  .picture {
-    width: 50%;
-  }
-  .picture.left::before {
-    width: 100%;
-    height: 30%;
-    position: absolute;
-    bottom: auto;
-    top: 0;
-    left: 0;
-    z-index: -1;
-  }
-  .about-me__title {
-    text-align: center;
-    margin-top: 1em;
-  }
-  #services .container {
-    flex-direction: column;
-  }
-  .service {
-    width: 100%;
-    max-width: 100%;
-    height: auto;
-    margin: 2em 0;
-  }
-  .service__description {
-    margin-bottom: 1em;
-  }
-
-  #services .container::before {
-    width: 30%;
-    height: 100%;
-    bottom: 0;
-    right: 0;
-    left: auto;
-    z-index: 0;
-  }
-
-  #contact .container {
-    flex-direction: column;
-  }
-  #contact .picture.right {
-    margin-top: 1em;
-  }
-  .picture.right::before {
-    width: 100%;
-    height: 30%;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    z-index: -1;
-  }
+@media (max-width: 1000px) {
+  /* Styles adaptés pour écrans plus petits */
 }
 
-@media all and (max-width: 650px) {
-  .top-header {
-    flex-direction: column;
-    padding-inline: 0;
-  }
-  .top-header .nav,
-  .top-header .nav ul {
-    width: 100%;
-    padding: 0 0 0 0;
-  }
-  .top-header .nav li {
-    flex: 1;
-    padding-block: 1em;
-    text-align: center;
-  }
-  .picture.left::before,
-  .picture.right::before {
-    height: 150px;
-  }
-  #services .container {
-    align-items: center;
-  }
-  .service {
-    max-width: 90%;
-  }
-  #about,
-  #contact {
-    padding-inline: 2em;
-    padding-block: 2em;
-  }
-  form {
-    width: 100%;
-  }
-  .picture {
-    width: 80%;
-  }
+@media (max-width: 650px) {
+  /* Styles adaptés pour très petits écrans */
 }
